refactor: commit inicial